[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["rich", "asyncio", "pre-commit", "ruff"]
test = ["pytest", "pytest-asyncio"]
docs = ["sphinx==4.4.0",
    "sphinxcontrib-trio==1.1.2",
    "sphinxcontrib-websupport>=1.2.4",
    "typing-extensions>=4.5.0"
    ]

[tool.pdm.scripts]
local = "python testing.py"
tests = "pytest -m asyncio tests/"

[project]
name = "WEAO"
version = "1.0.0"
description = "Pythonic API Wrapper for WEAO API"
authors = [
    {name = "xFGhoul"},
]
dependencies = [
    "aiohttp>=3.8.4",
    "humanize>=4.6.0",
    "yarl>=1.8.2",
    "ruff>=0.0.277",
    "msgspec>=0.16.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}



[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
ignore = ["F403", "E501"]

[tool.ruff.per-file-ignores]
"docs/conf.py" = ["E402"]
"docs/extensions/attributetable.py" = ["F402"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
